--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -5,17 +5,13 @@
 {% load staticfiles %}
 
 <div class="container text-center">
-    <h1>What's Happening?</h1>
+    <h1>---Here's What I've Done So Far---</h1>
     <div class="row">
-        <div class="col-md-4">
-            <img src="{% static 'homepage/images/pic5.jpg' %}" class="img-fluid">
-            <caption>Web Development</caption>
+        <div class="col-md-6">
+            <img src="{% static 'homepage/images/instrument_overview.png' %}" class="img-fluid">
+            <caption>UHV Instrument Design</caption>
         </div>
-        <div class="col-md-4">
-            <img src="{% static 'homepage/images/pic2.jpg' %}" class="img-fluid">
-            <caption>Machine Learning</caption>
-        </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <img src="{% static 'homepage/images/pic3.jpg' %}" class="img-fluid">
             <caption>Surface Science</caption>
         </div>
