--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -9,11 +9,13 @@
     <div class="row">
         <div class="col-md-6">
             <img src="{% static 'homepage/images/instrument_overview.png' %}" class="img-fluid">
-            <caption>UHV Instrument Design</caption>
         </div>
         <div class="col-md-6">
-            <img src="{% static 'homepage/images/pic3.jpg' %}" class="img-fluid">
-            <caption>Surface Science</caption>
+            <h4>UHV Instrument Design</h4>
+            <p>I have designed a surface science instrument capable of
+            depositing size-selected metal clusters on substrates in ultra-high
+            vacuum, atomic layer deposition, as well as in situ analysis of the
+            as-deposited samples via XPS and TPD.</p>
         </div>
     </div>
 </div>
