--- a/homepage/templates/homepage/projects.html
+++ b/homepage/templates/homepage/projects.html
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-md-6">
             <a href="{% url 'homepage:instrument_design' %}">
-                <img class="img-responsive" src="{% static 'homepage/images/project_instrumentdesign.png' %}">
+                <img class="img-fluid" src="{% static 'homepage/images/instrument_overview.png' %}">
             </a>
             <a href="{% url 'homepage:instrument_design' %}">
                 <h4>Instrument Design with CAD tools</h4>
@@ -20,7 +20,7 @@
         </div>
         <div class="col-md-6">
             <a href="{% url 'homepage:cluster_deposition' %}">
-                <img class="img-responsive" src="{% static 'homepage/images/project_cluster.jpg' %}">
+                <img class="img-fluid" src="{% static 'homepage/images/project_cluster.jpg' %}">
             </a>
             <a href="{% url 'homepage:cluster_deposition' %}">
                 <h4>Size-Selected Cluster Deposition System </h4>
@@ -30,7 +30,7 @@
     <div class="row">
         <div class="col-md-6">
             <a href="{% url 'homepage:molecular_beam' %}">
-                <img class="img-responsive" src="{% static 'homepage/images/project_littlemachine.jpg' %}">
+                <img class="img-fluid" src="{% static 'homepage/images/project_littlemachine.jpg' %}">
             </a>
             <a href="{% url 'homepage:molecular_beam' %}">
                 <h4>Molecular Beam System </h4>
@@ -38,7 +38,7 @@
         </div>
         <div class="col-md-6">
             <a href="{% url 'homepage:results' %}">
-                <img src="{% static 'homepage/images/project_result.png' %}">
+                <img class="img-fluid" src="{% static 'homepage/images/project_result.png' %}">
             </a>
             <a href="{% url 'homepage:results' %}">
                 <h4>Some Results of the Research</h4>
