--- a/homepage/templates/homepage/index_backup.html
+++ b/homepage/templates/homepage/index_backup.html
@@ -1,65 +1,28 @@
 {% extends 'homepage/base.html' %}
 
+
 {% block content %}
 {% load staticfiles %}
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="{% static 'homepage/images/pic1.jpg' %}">
-            <div class="carousel-caption">
-                <h1>Vim + Tmux + Jupyter Notebook</h1>
-                <p>Perfect IDE for everything!</p>
-            </div>
-        </div><!-- End Active-->
-        <div class="item">
-            <img src="{% static 'homepage/images/pic2.jpg' %}">
-        </div>
-        <div class="item">
-            <img src="{% static 'homepage/images/pic3.jpg' %}">
-        </div>
-        <!-- start slider controls -->
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-</div> <!-- End slider-->
 
 <div class="container text-center">
-    <h1>I am still actively constructing my personal website, and more content will be added soon.</h1>
-</div>
-
-<div class="container text-center">
-    <h2>Computer Stuff</h2>
+    <h1>---Here's What I've Done So Far---</h1>
     <div class="row">
-        <div class="col-sm-4">
-            <img src="{% static 'homepage/images/autocad.ico' %}" class="icon">
-            <h4>AutoCAD</h4>
+        <div class="col-md-6">
+            <img src="{% static 'homepage/images/project_instrumentdesign.png' %}" class="img-fluid">
         </div>
-        <div class="col-sm-4">
-            <img src="{% static 'homepage/images/python.ico' %}" class="icon">
-            <h4>Python</h4>
-        </div>
-        <div class="col-sm-4">
-            <img src="{% static 'homepage/images/html.ico' %}" class="icon">
-            <h4>HTML5</h4>
+        <div class="col-md-6">
+            <p>I have designed a surface science instrument capable of
+            depositing size-selected metal clusters on substrates in ultra-high
+            vacuum, atomic layer deposition, as well as in situ analysis of the
+            as-deposited samples via XPS and TPD.</p>
         </div>
     </div>
 </div>
 
 <div class="container">
+    <div class="spacing">
     <div class="row">
         <div class="col-md-6">
-            <h4>About me</h4>
             <p>I was born in Northeast China, right on the border between China
             and North Korea. For some reason, I found myself zig-zagging in a
             easterly direction, finishing my high school in Northeast China,
@@ -73,9 +36,9 @@
             now to be a computer programmer.</p>
         </div>
         <div class="col-md-6">
-            <img src="{% static 'homepage/images/pic4.jpg' %}" class="img-responsive">
+            <img class="img-fluid" src="{% static 'homepage/images/pic4.jpg' %}">
         </div>
     </div>
+    </div>
 </div>
-
 {% endblock %}
