--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -20,8 +20,10 @@
         <nav id="menu">
             <ul class="links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="generic.html">Generic</a></li>
-                <li><a href="elements.html">Elements</a></li>
+                <li><a href="generic.html">Resume</a></li>
+                <li><a href="elements.html">Chemistry Projects</a></li>
+                <li><a href="elements.html">Path to Data Science</a></li>
+                <li><a href="elements.html">Blog</a></li>
             </ul>
         </nav>
 
@@ -36,59 +38,82 @@
                     </header>
                 </div>
             </article>
-        <!-- <article>
-        <!--     <img src="{% static 'homepage/images/slide05.jpg' %}"  alt="" />
-        <!--     <div class="inner">
-        <!--         <header>
-        <!--             <p>Ipsum dolor sed magna veroeros lorem ipsum</p>
-        <!--             <h2>Lorem adipiscing</h2>
-        <!--         </header>
-        <!--     </div>
-        <!-- </article> -->
+            <!-- another image can be added here if needed.-->
         </section>
-
     <!-- One -->
         <section id="one" class="wrapper style2">
             <div class="inner">
-                <div class="grid-style">
+                <header class="align-center">
+                    <p class="special">Atoms, CLusters, Particles</p>
+                    <h2>Surface Chemistry</h2>
+                </header>
+                <section id="one" class="wrapper style2">
+                    <div class="inner">
+                        <div class="grid-style">
 
-                    <div>
-                        <div class="box">
-                            <div class="image fit">
-                                <img src="{% static 'homepage/images/pic02.jpg' %}" alt="" />
+                            <div>
+                                <div class="box">
+                                    <div class="image fit">
+                                        <img src="{% static 'homepage/images/project_instrumentdesign.png' %}" alt="" />
+                                    </div>
+                                    <div class="content">
+                                        <header class="align-center">
+                                            <p>Cluster Deposition Source</p>
+                                            <h2>UHV Instrument Design with AutoCAD</h2>
+                                        </header>
+                                        <p>Design of a sophisticated UHV instrument, including ion optics, quadrupoles, vacuum chambers, sample stages, and various deposition systems.</p>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="content">
-                                <header class="align-center">
-                                    <p>maecenas sapien feugiat ex purus</p>
-                                    <h2>Lorem ipsum dolor</h2>
-                                </header>
-                                <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
-                                <footer class="align-center">
-                                    <a href="#" class="button alt">Learn More</a>
-                                </footer>
+
+                            <div>
+                                <div class="box">
+                                    <div class="image fit">
+                                        <img src="{% static 'homepage/images/project_cluster.jpg' %}" alt="" />
+                                    </div>
+                                    <div class="content">
+                                        <header class="align-center">
+                                            <p>Home-built surface science instrument </p>
+                                            <h2>Turn Design into Reality</h2>
+                                        </header>
+                                        <p>I successfully built and tested the UHV surface science appratus from the ground up. It was a huge project, and I learned a lot from it.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div>
+                                <div class="box">
+                                    <div class="image fit">
+                                        <img src="{% static 'homepage/images/paper.png' %}" alt="" />
+                                    </div>
+                                    <div class="content">
+                                        <header class="align-center">
+                                            <p>Home-built surface science instrument </p>
+                                            <h2>Turn Design into Reality</h2>
+                                        </header>
+                                        <p> Cras aliquet urna ut sapien elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div>
+                                <div class="box">
+                                    <div class="image fit">
+                                        <img src="{% static 'homepage/images/project_littlemachine.jpg' %}" alt="" />
+                                    </div>
+                                    <div class="content">
+                                        <header class="align-center">
+                                            <p>Home-built surface science instrument </p>
+                                            <h2>Turn Design into Reality</h2>
+                                        </header>
+                                        <p> Cras aliquet urna ut sapien elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div>
-                        <div class="box">
-                            <div class="image fit">
-                                <img src="{% static 'homepage/images/pic03.jpg' %}" alt="" />
-                            </div>
-                            <div class="content">
-                                <header class="align-center">
-                                    <p>mattis elementum sapien pretium tellus</p>
-                                    <h2>Vestibulum sit amet</h2>
-                                </header>
-                                <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
-                                <footer class="align-center">
-                                    <a href="#" class="button alt">Learn More</a>
-                                </footer>
-                            </div>
-                        </div>
                     </div>
-
-                </div>
+                </section>
             </div>
         </section>
 
