--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -22,6 +22,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="generic.html">Resume</a></li>
                 <li><a href="elements.html">Chemistry Projects</a></li>
+                <li><a href="elements.html">Programming Projects</a></li>
                 <li><a href="elements.html">Path to Data Science</a></li>
                 <li><a href="elements.html">Blog</a></li>
             </ul>
